# materials-ml-project

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  train_screening_model.py
.github/workflows/: ci.yml
blog/: 01-building-the-dataset.md  02-composition-baseline.md  03-cgcnn-structure-model.md  04-uncertainty-and-active-learning.md
models/: screening_model.joblib
notebooks/: 01_explore_electrodes.ipynb  02_featurize_baseline.ipynb  03_structures.ipynb  04_cgcnn_structure.ipynb  05_uncertainty_active_learning.ipynb
src/materials_ml/: data.py
tests/: test_data.py
