[project]
name = "materials-ml-project"
version = "0.1.0"
description = "Project to predict the average voltage of insertion-electrode (cathode) materials"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matminer>=0.10.1",
    "mp-api>=0.46.1",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pymatgen>=2026.5.4",
    "scikit-learn>=1.8.0",
]